--- a/Views/BlanketView.xaml
+++ b/Views/BlanketView.xaml
@@ -45,9 +45,9 @@
 
                 <Border  BorderBrush="Gray" Grid.Row="3" Panel.ZIndex="0">
                     <ScrollViewer x:Name="scroll" HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Auto">
-                        <ContentControl x:Name="cntMain" Grid.Row="1" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
-                            <ContentControl x:Name="cntMerit" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
-                                <ContentControl x:Name="cntWord" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
+                        <ContentControl x:Name="cntMain" Style="{StaticResource contSearch}">
+                            <ContentControl x:Name="cntMerit" Style="{StaticResource contSearch}">
+                                <ContentControl x:Name="cntWord" Style="{StaticResource contSearch}">
                                 </ContentControl>
                             </ContentControl>
                         </ContentControl>
@@ -60,8 +60,8 @@
                             <ColumnDefinition Width="*" />
                             <ColumnDefinition Width="*" />
                         </Grid.ColumnDefinitions>
-                        <Button x:Name="btnTilbage" Click="Tilbage_Click" Content="Tilbage" Grid.Column="0" Style="{StaticResource btnNavigate}" />
-                        <Button x:Name="btnFrem" Click="Frem_Click" Content="Frem" Grid.Column="1" Style="{StaticResource btnNavigate}" />
+                        <Button x:Name="btnTilbage" Click="Tilbage_Click" Content="Tilbage" Grid.Column="0" Style="{StaticResource btnNavigate}"/>
+                        <Button x:Name="btnFrem" Click="Frem_Click" Content="Frem" Grid.Column="1" Style="{StaticResource btnNavigate}"/>
                     </Grid>
                 </Border>
             </Grid>
